<resources>
    <!-- Strings for app details, activity names and fragment names -->
    <string name="app_name">Translink Informer</string>
    <string name="title_activity_main">Translink Informer</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_help">Information</string>
    <string name="title_activity_journey">Journey Results</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- Strings for the navigation drawer -->
    <string name="drawer_nav_trips">Favourite Journeys</string>
    <string name="drawer_nav_routes">Saved Services</string>
    <string name="drawer_nav_bookmarks">Bookmarked Stops</string>
    <string name="drawer_title_translink">Translink Services</string>
    <string name="drawer_nav_planner">Journey Planner</string>
    <string name="drawer_nav_timetables">Service Timetables</string>
    <string name="drawer_nav_map">Stop Lookup</string>
    <string name="drawer_title_settings">Settings and Help</string>
    <string name="drawer_nav_settings">Settings</string>
    <string name="drawer_nav_feedback">Feedback and Bugs</string>
    <string name="drawer_nav_help">Information</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  -->
</resources>
