<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_trips"
            android:title="@string/drawer_nav_trips" />
    </group>

    <item android:title="@string/drawer_title_translink">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_planner"
                    android:title="@string/drawer_nav_planner" />
            </group>
        </menu>
    </item>

    <item android:title="@string/drawer_title_settings">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:title="@string/drawer_nav_settings" />
            </group>
        </menu>
    </item>
</menu>